--- a/mainstyle.css
+++ b/mainstyle.css
@@ -7,34 +7,10 @@ body{
     background-attachment: fixed;
     border: 0;
 }
-#site-header{
-    width: 100%;
-    height: 9.3vw;
-    background-color: #373c3f;
-    float: left;
-}
 #mobile-menu{
     opacity: 0;
     width: 0;
     float: right;
-}
-.top-table{
-    padding-left: 5%;
-    height: 100%;
-    width: 55%;
-}
-.small-table{
-    width: 0%;
-    opacity: 0;
-}
-.outer-menu{
-    vertical-align: middle;
-    color: #ebebeb;
-    font-size: 1.3vw;
-    text-align: left;
-}
-.inner-menu{
-    display: inline-block;
 }
 #banner{
     width: 100%;
@@ -42,26 +18,35 @@ body{
     background: linear-gradient(to right, #0dc3d8, #078aa4);
     color: #ffffff;
 }
+#site-header{
+    width: 100%;
+    height: 9.3vw;
+    background-color: #373c3f;
+    float: left;
+}
+.top-table{
+    padding-left: 5%;
+    height: 100%;
+    width: 55%;
+}
+.outer-menu{
+    vertical-align: middle;
+    color: #ebebeb;
+    font-size: 1.3vw;
+    text-align: left;
+}
+.small-table{
+    width: 0%;
+    opacity: 0;
+}
+.inner-menu{
+    display: inline-block;
+}
 .banner-top{
     padding-left: 6%;
     padding-top: 28vw;
     padding-right: 20%;
     font-size: 5vw;
-}
-.banner-down{
-    color: #abd5df;
-    width: 77%;
-    padding-left: 6%;
-    padding-top: 4.7%;
-    font-size: 3.2vw;
-    float: left;
-}
-.right-banner{
-    height: 2.5vw;
-    padding-left: 32%;
-}
-.text-box{
-    height: 23.5vw;
 }
 #tb-left{
     width: 77%;
@@ -80,6 +65,21 @@ body{
     background: #bc3183;
     color: #ffffff;
     float: right;
+}
+.banner-down{
+    color: #abd5df;
+    width: 77%;
+    padding-left: 6%;
+    padding-top: 4.7%;
+    font-size: 3.2vw;
+    float: left;
+}
+.right-banner{
+    height: 2.5vw;
+    padding-left: 32%;
+}
+.text-box{
+    height: 23.5vw;
 }
 .tbr-text{
     padding-left: 43%;
@@ -115,12 +115,6 @@ body{
     height: 44vw;
     background-color: #ebebeb;
 }
-.dt-main{
-    color: #088ca5;
-    font-size: 2.7vw;
-    padding-left: 6%;
-    padding-top: 4.2%;
-}
 .text{
     color: #515151;
     width: 41%;
@@ -129,6 +123,12 @@ body{
     padding-left: 6%;
     font-size: 1.35vw;
     line-height: 195%;
+}
+.dt-main{
+    color: #088ca5;
+    font-size: 2.7vw;
+    padding-left: 6%;
+    padding-top: 4.2%;
 }
 @media (max-width: 640px) {
     #site-header{
@@ -193,11 +193,11 @@ body{
         padding-left: 43%;
         padding-top: 37%;
     }
-    #img-two{
+    #img2{
         width: 100%;
         min-height: 85vw;
     }
-    #img-three{
+    #img3{
         width: 100%;
         min-height: 85vw;
         margin-bottom: 9%;
